added additional projects, links to hosted projects, additional styling and personal information to portfolio

--- a/index.html
+++ b/index.html
@@ -68,46 +68,35 @@
     <!-- this div gets cut off on small screens need to fix -->
     <!-- seem to need overflow control on div b/c of image, fixing the fact that img shrinks + when small/xs -->
 
-    <main class=" container ml-auto mr-auto mt-5 mb-5 w-75 h-100 main-content">
+    <main class="container ml-auto mr-auto mt-5 mb-5 w-75 h-100 main-content">
       <h2 class="p-3">About Me</h2>
 
       <hr class="mx-3" />
 
       <div class="mh-50">
-        <img
-          src="assets/images/jasa-main-photo copy.jpg"
-          class="h-25 w-25 float-md-left mx-sm-auto p-3"
-          alt="photo of Jasa"
-        />
+        <div class="image-container">
+          <img
+            src="assets/images/jasa-main-photo copy.jpg"
+            class="float-sm-left mx-xs-auto p-3 jasa-headshot"
+            alt="photo of Jasa"
+          />
+        </div>
 
         <p class="p-2">
-          Lorem Ipsum is simply dummy text of the printing and typesetting
-          industry. Lorem Ipsum has been the industry's standard dummy text ever
-          since the 1500s, when an unknown printer took a galley of type and
-          scrambled it to make a type specimen book. It has survived not only
-          five centuries, but also the leap into electronic typesetting,
-          remaining essentially unchanged. It was popularised in the 1960s with
-          the release of Letraset sheets containing Lorem Ipsum passages, and
-          more recently with desktop publishing software like Aldus PageMaker
-          including versions of Lorem Ipsum.
+          Hi there! I'm a budding developer with decent familiarity with the
+          tech scene.
         </p>
 
         <p class="p-2">
-          Contrary to popular belief, Lorem Ipsum is not simply random text. It
-          has roots in a piece of classical Latin literature from 45 BC, making
-          it over 2000 years old. Richard McClintock, a Latin professor at
-          Hampden-Sydney College in Virginia, looked up one of the more obscure
-          Latin words, consectetur, from a Lorem Ipsum passage, and going
-          through the cites of the word in classical literature, discovered the
-          undoubtable source. Lorem Ipsum comes from sections 1.10.32 and
-          1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and
-          Evil) by Cicero, written in 45 BC.
+          I'm a current practitioner of HTML, CSS, JavaScript, React and several
+          visual frameworks such as Boostrap and Materialize. I'm also a fast,
+          independent learner.
         </p>
 
         <p class="p-2">
-          This book is a treatise on the theory of ethics, very popular during
-          the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit
-          amet..", comes from a line in section 1.10.32.
+          I'm also very interested in social enterprise and love to foster my
+          curiosity. If you'd like to work or learn together, we should connect
+          :)
         </p>
       </div>
     </main>
