--- a/portfolio.html
+++ b/portfolio.html
@@ -68,11 +68,13 @@
       <div>
         <div class="row portfolio-work">
           <div class="card col-md-4 p-0 mx-auto proj">
-            <img
-              class="portfolio-pic card-img-top"
-              src="assets/images/crystal-game.jpg"
-              alt="Crystal Game Project"
-            />
+            <a href="https://jasajam.github.io/unit-four-game/">
+                <img
+                class="portfolio-pic card-img-top"
+                src="assets/images/crystal-game.jpg"
+                alt="Crystal Game Project"
+                />
+            </a>
             <div class="card-body proj-details">
               <h5 class="card-title text-center text-white">
                 Crystal Twenty-One
@@ -84,11 +86,13 @@
           </div>
 
           <div class="card col-md-4 p-0 mx-auto proj">
-            <img
-              class="portfolio-pic card-img-top"
-              src="assets/images/neighbor-favors.png"
-              alt="Neighbor Favors Group Project"
-            />
+            <a href="https://neighbor-favors.herokuapp.com/">
+                <img
+                class="portfolio-pic card-img-top"
+                src="assets/images/neighbor-favors.png"
+                alt="Neighbor Favors Group Project"
+                />
+            </a>
             <div class="card-body proj-details">
               <h5 class="card-title text-center text-white">Neighbor Favors</h5>
               <p class="card-text text-center">
@@ -101,11 +105,13 @@
 
 
           <div class="card col-md-4 p-0 mx-auto proj">
-            <img
-              class="portfolio-pic card-img-top"
-              src="assets/images/hairstyle-gif-app.jpg"
-              alt="That's a Look Project"
-            />
+            <a href="https://jasajam.github.io/giphyapp/">
+                <img
+                class="portfolio-pic card-img-top"
+                src="assets/images/hairstyle-giphy-app.png"
+                alt="That's a Look Project"
+                />
+            </a>
             <div class="card-body proj-details">
               <h5 class="card-title text-center text-white py-0">
                 That's a Look
@@ -118,11 +124,13 @@
           </div>
 
           <div class="card col-md-4 p-0 mx-auto proj">
-            <img
-              class="portfolio-pic card-img-top"
-              src="assets/images/friend-redo.png"
-              alt="Friend Finder Project"
-            />
+            <a href="https://jfriendfind.herokuapp.com/">
+                <img
+                class="portfolio-pic card-img-top"
+                src="assets/images/friend-redo.png"
+                alt="Friend Finder Project"
+                />
+            </a>
             <div class="card-body proj-details">
               <h5 class="card-title text-center text-white py-0">
                 Friend Finder
@@ -134,11 +142,13 @@
           </div>
 
           <div class="card col-md-4 p-0 mx-auto proj">
-            <img
-              class="portfolio-pic card-img-top"
-              src="assets/images/burger.png"
-              alt="Eat-Da-Burger Project"
-            />
+            <a href="https://fathomless-ravine-72655.herokuapp.com/">
+                <img
+                class="portfolio-pic card-img-top"
+                src="assets/images/burger.png"
+                alt="Eat-Da-Burger Project"
+                />
+            </a>
             <div class="card-body proj-details">
               <h5 class="card-title text-center text-white py-0">
                 Eat-Da-Burger
@@ -150,18 +160,56 @@
             </div>
           </div>
 
-          <div class="card col-md-4 p-0 mx-auto proj">
-            <img
-              class="portfolio-pic card-img-top"
-              src="assets/images/psychic-game.jpg"
-              alt="Psychic Game Project"
-            />
+        <div class="card col-md-4 p-0 mx-auto proj">
+            <a href="https://jasajam.github.io/psychic-game/">
+                <img
+                    class="portfolio-pic card-img-top"
+                    src="assets/images/psychic-game.png"
+                    alt="Psychic Game Project"
+                />
+            </a>
             <div class="card-body proj-details">
                 <h5 class="card-title text-center text-white py-0">
                     You're a Psychic
                 </h5>
                 <p class="card-text text-center my-0">
                     An application for guessing the computer's chosen letter. First ever JS project.
+                </p>
+            </div>
+        </div>
+
+        <div class="card col-md-4 p-0 mx-auto proj">
+            <a href="https://moreyouknow.herokuapp.com/">
+                <img
+                    class="portfolio-pic card-img-top"
+                    src="assets/images/scraper.png"
+                    alt="Cheerio Scraping Project"
+                />
+            </a>
+            <div class="card-body proj-details">
+                <h5 class="card-title text-center text-white py-0">
+                    The More You Know
+                </h5>
+                <p class="card-text text-center my-0">
+                    An application to see new strange news. Made with Cheerio, JS, Mongo and Bootstrap.
+                </p>
+            </div>
+        </div>
+
+        <div class="card col-md-4 p-0 mx-auto proj">
+            <a href="https://jasajam.github.io/triviagame/">
+                <img
+                    class="portfolio-pic card-img-top"
+                    src="assets/images/triva-quiz.png"
+                    alt="Timeout Quiz Project"
+                />
+            </a>
+            <div class="card-body proj-details">
+                <h5 class="card-title text-center text-white py-0">
+                    Top Notch Triva
+                </h5>
+                <p class="card-text text-center my-0">
+                    A timeout quiz game - do you know all of these countries' captitals? Made with JS.
                 </p>
             </div>
         </div>
@@ -178,8 +226,8 @@
       </div>
     </div>
 
-    <script>
+    <!-- <script>
       function copyEmail() {}
-    </script>
+    </script> -->
   </body>
 </html>
